--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1>Posts</h1>
+  <p>{{ site.description }}</p>
 
   <ul class="posts">
     {% for post in site.posts %}
