Work in progress.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="home">
 
+  <p><i class="fa fa-puzzle-piece fa-5x" style="color:orange"></i> This site is currently under construction. Some items may not be complete.<p>
+
   <p>{{ site.description }}</p>
 
   <ul class="posts">
