--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <p class="rss-subscribe"><a href="{{ "/feed.xml" | prepend: site.baseurl }}"><i style="color: orange;" class="fa fa-rss-square"></i> subscribe via RSS</a></p>
 
 </div>
