Photo layout and content updates.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@ layout: default
 
 <div class="home">
 
+  <div class="row">
+      <img src="{{ site.imageurl }}/me.jpeg" class="img-circle profile" alt="me">
+  </div>
+
+  <div style="text-align: center" class="row">
+    <a href="http://www.linkedin.com/in/{{ site.linkedin_username }}">
+      <i class="fa fa-linkedin-square marketing-icon"></i>
+    </a>
+    <a href="https://github.com/{{ site.github_username }}">
+      <i class="fa fa-github-square marketing-icon"></i>
+    </a>
+    <a href="http://stackoverflow.com/users/2684204/lucas">
+      <i class="fa fa-stack-overflow marketing-icon"></i>
+    </a>
+    <a href="http://www.last.fm/user/GrokThis">
+      <i class="fa fa-lastfm-square marketing-icon"></i>
+    </a>
+  </div>
+
   <p class="lead">
     This is my portfolio website. It showcases some of the work that I have done, along with
     descriptions of my software engineering philosophy.
@@ -14,19 +33,5 @@ layout: default
     software I have created is closed source, so only high-level descriptions of some of these projects
     can be shared.
   </p>
-
-  <h2>Me Around the Web</h2>
-  <a href="http://www.linkedin.com/in/{{ site.linkedin_username }}">
-    <i class="fa fa-linkedin-square marketing-icon"></i>
-  </a>
-  <a href="https://github.com/{{ site.github_username }}">
-    <i class="fa fa-github-square marketing-icon"></i>
-  </a>
-  <a href="http://stackoverflow.com/users/2684204/lucas">
-    <i class="fa fa-stack-overflow marketing-icon"></i>
-  </a>
-  <a href="http://www.last.fm/user/GrokThis">
-    <i class="fa fa-lastfm-square marketing-icon"></i>
-  </a>
 
 </div>
