--- a/music.html
+++ b/music.html
@@ -5,15 +5,15 @@ layout: default
 <div class="music-page">
     <h1>Music charts</h1>
     <h2>Weekly</h2>
+    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_7_DAYS">Lastfm 7 days</a>
     <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=7day&size=5x5">
-    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_7_DAYS">Lastfm 7_DAYS</a>
     <h2>Monthly</h2>
+    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_30_DAYS">Lastfm 30 days</a>
     <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=1month&size=5x5">
-    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_30_DAYS">Lastfm 30_DAYS</a>
     <h2>6 months</h2>
+    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_180_DAYS">Lastfm 180 days</a>
     <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=6month&size=5x5">
-    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_180_DAYS">Lastfm 180_DAYS</a>
     <h2>12 months</h2>
+    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_365_DAYS">Lastfm 365 days</a>
     <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=6month&size=5x5">
-    <a href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_365_DAYS">Lastfm 365_DAYS</a>
 </div>
