--- a/music.html
+++ b/music.html
@@ -2,31 +2,41 @@
 layout: default
 ---
 
+{% assign rows = 6 %}
+{% assign cols = 6 %}
+{% assign imageSize = 150 %}
+
+
 <div class="music-page">
     <h1>Music charts</h1>
     <div class="chart-container">
         <a class="chart-lastfm-link"
             href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_7_DAYS">Lastfm 7 days</a>
-        <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=7day&size=5x5">
+        <img class="lastfm-chart"
+            src="https://lastfmtopalbums.dinduks.com/patchwork.php?user=GrokThis&period=7day&rows={{ rows }}&cols={{ cols }}&imageSize={{ imageSize }}">
     </div>
     <div class="chart-container">
         <a class="chart-lastfm-link"
-            href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_30_DAYS">Lastfm 30 days</a>
-        <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=1month&size=5x5">
+            href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_30_DAYS">Lastfm 1 month</a>
+        <img class="lastfm-chart"
+            src="https://lastfmtopalbums.dinduks.com/patchwork.php?user=GrokThis&period=1month&rows={{ rows }}&cols={{ cols }}&imageSize={{ imageSize }}">
     </div>
     <div class="chart-container">
         <a class="chart-lastfm-link"
-            href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_180_DAYS">Lastfm 180 days</a>
-        <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=6month&size=5x5">
+            href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_180_DAYS">Lastfm 6 months</a>
+        <img class="lastfm-chart"
+            src="https://lastfmtopalbums.dinduks.com/patchwork.php?user=GrokThis&period=6month&rows={{ rows }}&cols={{ cols }}&imageSize={{ imageSize }}">
     </div>
     <div class="chart-container">
         <a class="chart-lastfm-link"
-            href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_365_DAYS">Lastfm 365 days</a>
-        <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=12month&size=5x5">
+            href="https://www.last.fm/user/GrokThis/library/albums?date_preset=LAST_365_DAYS">Lastfm 1 year</a>
+        <img class="lastfm-chart"
+            src="https://lastfmtopalbums.dinduks.com/patchwork.php?user=GrokThis&period=12month&rows={{ rows }}&cols={{ cols }}&imageSize={{ imageSize }}">
     </div>
     <div class="chart-container">
         <a class="chart-lastfm-link" href="https://www.last.fm/user/GrokThis/library/albums?date_preset=ALL">Lastfm
             overall</a>
-        <img class="lastfm-chart" src="http://www.tapmusic.net/collage.php?user=GrokThis&type=overall&size=5x5">
+        <img class="lastfm-chart"
+            src="https://lastfmtopalbums.dinduks.com/patchwork.php?user=GrokThis&period=overall&rows={{ rows }}&cols={{ cols }}&imageSize={{ imageSize }}">
     </div>
 </div>
