--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
   <div class="row">
-      <img src="{{ site.imageurl }}/me-2019-04.jpg" class="profile" alt="me">
+      <img src="{{ site.imageurl }}/me-2024-flower.png" class="profile" alt="me">
   </div>
 
   <div style="text-align: center" class="row">
